<resources>
    <string name="app_name">RetrofitIntegration</string>
    <string name="get">Get</string>
    <string name="post">Post</string>
    <string name="put">Put</string>
    <string name="patch">Patch</string>
    <string name="delete">Delete</string>
    <string name="multipart">MultiPart</string>
    <string name="pick_image">Pick Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="settings">Go To Settings</string>
    <string name="permissionRequirement">Required Permissions are necessary for using this feature</string>
    <string name="ok">Ok</string>
    <string name="CANCEL">CANCEL</string>
</resources>
